[package]
name = "teensyr"
version = "0.1.0"
authors = ["Geoff Cant <nem@erlang.geek.nz>", "Paul Osborne <osbpau@gmail.com>"]

[dependencies.zinc]
git = "https://github.com/Gyscos/zinc.git"
branch = "crazy"
features = ["mcu_k20"]

[dependencies.macro_platformtree]
git = "https://github.com/Gyscos/zinc.git"
branch = "crazy"
path = "macro_platformtree"

[dependencies.ioreg]
git = "https://github.com/Gyscos/zinc.git"
branch = "crazy"
path = "ioreg"

[dependencies.platformtree]
git = "https://github.com/Gyscos/zinc.git"
branch = "crazy"
path = "platformtree"

[dependencies.rust-libcore]
version = "*"

[[bin]]
name = "blink"
path = "blink.rs"
